--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -137,19 +137,20 @@ body {
     font-family: "Source Sans Pro", "Spin Cycle OT", sans-serif;
     
 }
-
+/* Background Style  */
 .hero {
     min-height: 100vh;
     height: auto;
     max-width: 1440px;
     background-image: url(./images/background.png);
-    /* background-position: center; */
     background-repeat: no-repeat;
     background-size: cover;
     background-position-x: center;
     padding: 0 100px 87px 100px;
 }
 
+
+/* navbar styles  */
 header {
     padding: 30px 0;
 }
@@ -158,7 +159,6 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* background-color: green; */
 }
 .logo{
     display: flex;
@@ -183,6 +183,8 @@ ul li a {
     text-decoration: none;
     
 }
+
+/* hero section  */
 .hero-section{
     margin-top: 110px;
 }
@@ -220,6 +222,7 @@ ul li a {
     border-radius: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
 }
+
 
 .hero-intro {
     margin-top: 125px;
@@ -266,4 +269,37 @@ ul li a {
     font-style: italic;
 }
 
+
+/* Quote section */
+
+.quote-section {
+    background-color: #C271FF;
+    min-height: 400px;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 59px;
+}
+
+.quote-text {
+    max-width: 730px;
+    color: #fff;
+    font-size: 22px;
+}
+
+.quote-text blockquote {
+    margin-bottom: 22px;
+    font-style: italic;
+    font-weight: 100;
+}
+
+.quote-text h3 {
+    margin-bottom: 38px;
+}
+
+.quote-text p {
+    font-style: italic;
+    font-weight: 100;
+}
 
