--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -265,7 +265,7 @@ ul li a {
     font-size: 16px;
     color: #fff;
     text-align: center;
-    font-weight: 100px;
+    font-weight: 100;
     font-style: italic;
 }
 
@@ -301,5 +301,109 @@ ul li a {
 .quote-text p {
     font-style: italic;
     font-weight: 100;
+}
+
+/* Tutorial Display Section  */
+
+.tutorial-section {
+    background-color: #fff;
+    min-height: 530px;
+    height: auto;
+    padding: 80px 106px;
+}
+
+.tutorial-heading {
+    font-size: 32px;
+    color: #071629;
+    font-weight: 100;
+    text-align: center;
+    margin-bottom: 75px;
+}
+
+.tut-span {
+    font-weight: bold;
+    color: #C271FF;
+}
+.tutorial-body {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 20px;
+
+}
+
+.tutorial-item {
+    flex: 1 1 255px;
+    max-width: 255px;
+    background: #fff;
+    border-radius: 10px;
+}
+
+.img-container {
+    width: 255px;
+    height: 155px;
+}
+.tutorial-item .img {
+    width: 100%;
+    height: 155px;
+}
+
+.tutorial-item h3 {
+    max-width: 255px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #071629;
+    margin-top: 18px;
+    margin-bottom: 13px;
+
+}
+.tutorial-item p {
+    font-size: 14px;
+    font-weight: normal;
+    color: #8391a0;
+    line-height: 24px;
+}
+.tutorial-item h3,
+.tutorial-item p {
+    align-self: flex-start;
+    text-align: start;
+    padding-left: 25px;
+    max-width: 90%;
+}
+
+.author {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 10px;
+    margin: 14px 0;
+    padding-left: 25px;
+}
+.author img {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+}
+.author h4 {
+    font-size: 14px;
+    color: #C271FF;
+}
+
+.rating {
+    display: flex;
+    align-items: center;
+    gap: 79px;
+    width: 100%;
+
+}
+.stars {
+    padding-left: 24px;
+}
+.stars i {
+    font-size: 12px;
+    color: #C271FF;
+
+
 }
 
