--- a/headphones/0-styles.css
+++ b/headphones/0-styles.css
@@ -154,3 +154,74 @@ header li {
         width: 100%;
     }
 }
+
+/* What-we-do section */
+.what-we-do {
+    padding: 8.7rem 6.7rem 6.875rem;
+    text-align: center;
+}
+.what-we-do .container {
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+.what-we-do .container > p {
+    max-width: 650px;
+    width: 100%;
+    text-align: center;
+    margin: 0 auto 5rem auto;
+    font-size: 1rem;
+    color: #071629;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns:repeat(4,1fr);
+    gap: 4rem;
+    text-align: center;
+}
+
+.grid-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 4rem;
+}
+
+
+.holberton_school-icon-ic_sound, .holberton_school-icon-ic_video, .holberton_school-icon-ic_music, .holberton_school-icon-ic_hearing {
+    color: #ff6565;
+    font-size: 56px;
+}
+
+.grid-item p{
+    font-size: 14px;
+    font-weight: normal;
+}
+
+@media(max-width: 1024px){
+    .what-we-do {
+        padding: 10rem 8rem 6.875rem;
+    }
+    .grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .grid p {
+        width: 80%;
+    }
+}
+
+@media(max-width:600px){
+    .what-we-do {
+        padding: 12rem 3rem;
+    }
+
+    .grid {
+        grid-template-columns: 1fr;
+    }
+
+    .grid p{
+        width: 80%;
+    }
+}
