--- a/headphones/0-styles.css
+++ b/headphones/0-styles.css
@@ -174,14 +174,14 @@ header li {
     color: #071629;
 }
 
-.grid {
+.what-we-do  .grid {
     display: grid;
     grid-template-columns:repeat(4,1fr);
     gap: 4rem;
     text-align: center;
 }
 
-.grid-item {
+.what-we-do .grid-item {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -195,7 +195,7 @@ header li {
     font-size: 56px;
 }
 
-.grid-item p{
+.what-we-do .grid-item p{
     font-size: 14px;
     font-weight: normal;
 }
@@ -204,24 +204,116 @@ header li {
     .what-we-do {
         padding: 10rem 8rem 6.875rem;
     }
-    .grid {
+    .what-we-do .grid {
         grid-template-columns: repeat(2, 1fr);
     }
-    .grid p {
+    .what-we-do .grid p {
         width: 80%;
     }
 }
 
 @media(max-width:600px){
     .what-we-do {
-        padding: 12rem 3rem;
+        padding: 12rem 3rem 6.875rem;
     }
 
-    .grid {
+    .what-we-do .grid {
         grid-template-columns: 1fr;
     }
 
-    .grid p{
+    .what-we-do .grid p{
         width: 80%;
+    }
+}
+
+
+/* Our result section */
+.our-result {
+    background-image: url(./images/headphones_hero_2.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding: 10rem 6rem 4rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.our-result .container {
+    width: 100%;
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+
+
+.our-result .container>p {
+    max-width: 650px;
+    width: 100%;
+    text-align: center;
+    margin: 0 auto 5rem auto;
+    font-size: 1rem;
+    font-weight: normal;
+    color: #D8D8D8;
+}
+
+.our-result .grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-content: center;
+    justify-items: center;
+    gap: 2rem 4rem;
+     text-align: center;
+}
+
+.our-result .grid-item {
+    background-image: url(./images/pentagone.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 190px;
+    height: 190px;
+    position: relative;
+}
+
+
+
+.our-result .grid-item h1 {
+    color: #fff;
+    font-size: 46px;
+    font-weight: bold;
+    position: relative;
+    top: 4rem;
+}
+.our-result .grid-item p {
+    color: #D8D8D8;
+    font-size: 14px;
+    font-weight: normal;
+    position: relative;
+    top: 4.645rem;
+}
+
+@media(max-width:1024px){
+
+    .our-result {
+        background-position: 40% 50%;
+        padding-top: 22rem ;
+    }
+    .our-result .grid {
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 6rem;
+    }
+}
+@media(max-width:600px){
+    .our-result {
+        background-position: 50%;
+        padding: 22rem 6% 6rem 6%;
+    }
+    .our-result .container>p {
+        width: 100%;
+    }
+    .our-result .grid {
+        grid-template-columns: repeat(1, 1fr);
     }
 }
