--- a/headphones/6-styles.css
+++ b/headphones/6-styles.css
@@ -91,7 +91,7 @@ header li {
 
 #cta {
     display: block;
-    margin: 2rem auto 65px;
+    margin: 2rem auto 67px;
     background-color: #ff6565;
     border: none;
     border-radius: 25px;
@@ -99,6 +99,14 @@ header li {
     font-size: 14px;
     font-weight: 700;
     padding: 13px 30px;
+    transform: translateX(0px);
+    transition: all 0.3s ease;
+}
+#cta:hover{
+    background-color: #071629;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    transform: translateY(-2px);
 }
 
 .header-content p {
@@ -210,6 +218,15 @@ header li {
 .holberton_school-icon-ic_hearing {
     color: #ff6565;
     font-size: 56px;
+    transition: all 0.3s ease;
+}
+.holberton_school-icon-ic_sound:hover,
+.holberton_school-icon-ic_video:hover,
+.holberton_school-icon-ic_music:hover,
+.holberton_school-icon-ic_hearing:hover {
+    color: #333;
+    transform: scale(1.2);
+    cursor: pointer;
 }
 
 .what-we-do .grid-item p {
@@ -217,6 +234,10 @@ header li {
     font-weight: normal;
 }
 
+.what-we-do .grid-item p:hover {
+    color: #FF6565;
+    cursor: crosshair;
+}
 @media(max-width: 1024px) {
     .what-we-do {
         padding: 10rem 8rem 6.875rem;
@@ -305,7 +326,23 @@ header li {
     padding: 5px;
     box-sizing: border-box;
     clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
+    animation: float 6s ease-in-out infinite;
 }
+
+ @keyframes float {
+     0% {
+         transform: translateY(0);
+     }
+
+     50% {
+         transform: translateY(-10px);
+     }
+
+     100% {
+         transform: translateY(0);
+     }
+ }
+
 
 .our-result .grid-item h1 {
     color: #fff;
@@ -445,6 +482,9 @@ footer .container {
 footer nav li a {
     text-decoration: none;
     color: #D8D8D8;
+}
+footer nav li a:hover{
+    color: #FF6565;
 }
 
 footer p {
